# design

./: README.md  compose.yaml  gitignore  pyproject.toml
src/: __init__.py  app_config.py  app_container.py  main.py  message_bus.py  worker.py
src/domain/client/: __init__.py  message_bus.py  rabbitmq_client.py
src/domain/gateway/: __init__.py  job_gateway.py
src/domain/model/: __init__.py  blog.py  job_queue.py  user.py
src/domain/repository/: __init__.py  blog_repo.py  user_repo.py
src/domain/service/: __init__.py  blog_service.py  user_service.py
src/domain/unit_of_work/: __init__.py  transaction_manager.py  unit_of_work.py
src/infrastructure/client/: __init__.py  message_bus.py  rabbitmq_client.py
src/infrastructure/repository/: blog_repo.py  user_repo.py
src/infrastructure/table/: __init__.py  blog_table.py  user_table.py
src/infrastructure/unit_of_work/: __init__.py  transaction_manager.py  unit_of_work.py
src/model/: __init__.py  blog.py  user.py
src/repository/: __init__.py  blog_repo.py  user_repo.py
src/service/: blog_service.py  user_service.py
src/table/: user_table.py
src/unit_of_work/: transaction_manager.py  unit_of_work.py
