[project]
name = "design"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aio-pika>=9.5.8",
    "asyncpg>=0.30.0",
    "dependency-injector>=4.48.2",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "sqlalchemy[asyncio]>=2.0.44",
]
